# pizza-api

./: alembic.ini  config.py  docker-compose.yaml  pyproject.toml
alembic/: env.py
alembic/versions/: 7357a6d72864_initial_migration.py
auth/: manager.py  settings.py  user_auth.py
migrations/: env.py
migrations/versions/: 39913d435fd3_added_required_tables.py  5e230983c0d1_new_column_user.py  9547ce943af4_update_db.py  a48b7e378fdd_new_column_users.py  ae1b2835a7a5_new_collumn.py  c74d21f68864_update_user.py  e255655e06a3_delete_columns_user.py
pizza_project/: database.py  main.py  models.py  schemas.py
pizza_project/CRUD/: pizza_crud.py  users_crud.py
pizza_project/routers/: api.py  pizza.py  pizza_routers.py  users.py  users_routers.py
tests/: conftest.py  test_auth.py  test_pizza.py  test_user.py
